--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </div>
       </a>
       </article>
+
           <article class="simulador" data-keywords="soldadura tig electrodo simulador taller immersive">
           <a href="#" target="_blank" class="simulador-link">
           <div class="contenido-simulador">
@@ -85,6 +86,7 @@
           </div>
           </a>
           </article>
+
           <article class="simulador" data-keywords="soldadura arco electrico industrial formacion">
           <a href="#" target="_blank" class="simulador-link">
           <div class="contenido-simulador">
@@ -94,6 +96,7 @@
           </div>
           </a>
           </article>
+
         </div>
         <div class="carousel-controls">
           <button class="carousel-btn left">&#8249;</button>
@@ -104,17 +107,22 @@
     </section>
 
       <!-- Mecánica, Metal y Fabricación Industrial -->
-      <section class="sector mecanica">
+    <!-- Mecánica, Metal y Fabricación Industrial -->
+<section class="sector mecanica">
   <h2>Mecánica, Metal y Fabricación Industrial</h2>
   <div class="carousel">
     <div class="carousel-track">
-      <a href="#" class="simulador-link">
-        <article class="simulador" data-keywords="mecanizado fresadora torno cnc realidad virtual industria">
-          <h3>Simulador CNC VR</h3>
-          <p><strong>Empresa:</strong> VRMecanics</p>
-          <p>Entrenamiento seguro en operaciones de fresado y torno industrial en RV.</p>
-        </article>
-      </a>
+      
+      <article class="simulador" data-keywords="mecanizado fresadora torno cnc realidad virtual industria">
+        <a href="#" target="_blank" class="simulador-link">
+          <div class="contenido-simulador">
+            <h3>Simulador CNC VR</h3>
+            <p><strong>Empresa:</strong> VRMecanics</p>
+            <p>Entrenamiento seguro en operaciones de fresado y torno industrial en RV.</p>
+          </div>
+        </a>
+      </article>
+
     </div>
     <div class="carousel-controls">
       <button class="carousel-btn left">&#8249;</button>
@@ -129,13 +137,17 @@
   <h2>Robótica, Automatización y Electricidad</h2>
   <div class="carousel">
     <div class="carousel-track">
-      <a href="#" class="simulador-link">
-        <article class="simulador" data-keywords="robotica automatizacion electricidad plc siemens programacion">
-          <h3>Simulador de PLC Interactivo</h3>
-          <p><strong>Empresa:</strong> Siemens XR</p>
-          <p>Plataforma inmersiva para programar y probar sistemas PLC en entornos simulados.</p>
-        </article>
-      </a>
+      
+      <article class="simulador" data-keywords="robotica automatizacion electricidad plc siemens programacion">
+        <a href="#" target="_blank" class="simulador-link">
+          <div class="contenido-simulador">
+            <h3>Simulador de PLC Interactivo</h3>
+            <p><strong>Empresa:</strong> Siemens XR</p>
+            <p>Plataforma inmersiva para programar y probar sistemas PLC en entornos simulados.</p>
+          </div>
+        </a>
+      </article>
+
     </div>
     <div class="carousel-controls">
       <button class="carousel-btn left">&#8249;</button>
@@ -150,13 +162,17 @@
   <h2>Logística y Construcción</h2>
   <div class="carousel">
     <div class="carousel-track">
-      <a href="#" class="simulador-link">
-        <article class="simulador" data-keywords="logistica construccion carretilla almacen elevadora realidad virtual">
-          <h3>LogistiVR</h3>
-          <p><strong>Empresa:</strong> ImmersiveLogix</p>
-          <p>Simulador de carretillas elevadoras y operaciones logísticas en almacén.</p>
-        </article>
-      </a>
+
+      <article class="simulador" data-keywords="logistica construccion carretilla almacen elevadora realidad virtual">
+        <a href="#" target="_blank" class="simulador-link">
+          <div class="contenido-simulador">
+            <h3>LogistiVR</h3>
+            <p><strong>Empresa:</strong> ImmersiveLogix</p>
+            <p>Simulador de carretillas elevadoras y operaciones logísticas en almacén.</p>
+          </div>
+        </a>
+      </article>
+
     </div>
     <div class="carousel-controls">
       <button class="carousel-btn left">&#8249;</button>
@@ -165,6 +181,7 @@
     <div class="carousel-indicators"></div>
   </div>
 </section>
+
 
 
     <!-- Sanidad y Emergencias -->
